force-app/main/default/objects/Added_Value_Report__c/Added_Value_Report__c.object-meta.xml
<CustomObject>
    <label>Added Value Report</label>
    <nameField>
        <displayFormat>AVR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Added Value Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>