force-app/main/default/objects/Added_Value_Report__c/fields/Annual_Occupancy_Costs_Paid__c.field-meta.xml
<CustomField>
    <fullName>Annual_Occupancy_Costs_Paid__c</fullName>
    <label>Annual Occupancy Costs Paid</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>