force-app/main/default/objects/Added_Value_Report__c/fields/Annual_Rent_Paid_by_Tenant_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rent_Paid_by_Tenant_Organisation__c</fullName>
    <label>Annual Rent Paid by Tenant Organisation</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>