force-app/main/default/objects/Added_Value_Report__c/fields/Average_Annual_Professional_Development__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Professional_Development__c</fullName>
    <inlineHelpText>RST staff only. PD = Professional Development</inlineHelpText>
    <label>Average Annual PD per FTE</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>