force-app/main/default/objects/Added_Value_Report__c/fields/Commercial_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Sponsor__c</fullName>
    <label>Commercial Sponsor</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>