force-app/main/default/objects/Added_Value_Report__c/fields/Community_Trust__c.field-meta.xml
<CustomField>
    <fullName>Community_Trust__c</fullName>
    <label>Community Trust</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>