force-app/main/default/objects/Added_Value_Report__c/fields/Council__c.field-meta.xml
<CustomField>
    <fullName>Council__c</fullName>
    <label>Council</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>