force-app/main/default/objects/Added_Value_Report__c/fields/Do_you_Operate_a_Facility__c.field-meta.xml
<CustomField>
    <fullName>Do_you_Operate_a_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you Operate a Facility</label>
    <type>Checkbox</type>
</CustomField>