force-app/main/default/objects/Added_Value_Report__c/fields/Gaming_Trust__c.field-meta.xml
<CustomField>
    <fullName>Gaming_Trust__c</fullName>
    <label>Gaming Trust</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>