force-app/main/default/objects/Added_Value_Report__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <label>Health</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>