force-app/main/default/objects/Added_Value_Report__c/fields/Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>Interest_Income__c</fullName>
    <label>Interest Income</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>