force-app/main/default/objects/Added_Value_Report__c/fields/Net_Surplus_Derived_from_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Net_Surplus_Derived_from_Facilities__c</fullName>
    <label>Operating Surplus/Loss</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>