force-app/main/default/objects/Added_Value_Report__c/fields/Number_of_Board_Members_Female__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Board_Members_Female__c</fullName>
    <label>Number of Board Members (Female)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>