force-app/main/default/objects/Added_Value_Report__c/fields/Number_of_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Facilities__c</fullName>
    <label>Number of Facilities</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>