force-app/main/default/objects/Added_Value_Report__c/fields/Number_of_Permanent_Staff_Female__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Permanent_Staff_Female__c</fullName>
    <label>Number of Permanent Staff (Female)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>