force-app/main/default/objects/Added_Value_Report__c/fields/Number_of_Permanent_Staff_FTE__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Permanent_Staff_FTE__c</fullName>
    <inlineHelpText>Please exclude any staff employed at your facilities.</inlineHelpText>
    <label>Number of Permanent Staff (FTE)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>