force-app/main/default/objects/Added_Value_Report__c/fields/Number_of_Sports_Houses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sports_Houses__c</fullName>
    <label>Number of Sports Houses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>