force-app/main/default/objects/Added_Value_Report__c/fields/Other_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Other_Contracts__c</fullName>
    <label>Other Contracts</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>