force-app/main/default/objects/Added_Value_Report__c/fields/Other_direct_income_derived_from_tenants__c.field-meta.xml
<CustomField>
    <fullName>Other_direct_income_derived_from_tenants__c</fullName>
    <inlineHelpText>This may include the contribution towards reception services, additional admin support, general ledger/bookkeeping, renting space on the server, contribution towards room hire, cleaning etc</inlineHelpText>
    <label>Other direct income derived from tenants</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>