force-app/main/default/objects/Added_Value_Report__c/fields/Other_Government__c.field-meta.xml
<CustomField>
    <fullName>Other_Government__c</fullName>
    <inlineHelpText>Include ACC income</inlineHelpText>
    <label>Other Government</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>