force-app/main/default/objects/Added_Value_Report__c/fields/Per_Square_Metre1__c.field-meta.xml
<CustomField>
    <fullName>Per_Square_Metre1__c</fullName>
    <inlineHelpText>Total Rent received from tenants/Total square metres those tenants occupy</inlineHelpText>
    <label>Rent Received Per Square Metre</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>