force-app/main/default/objects/Added_Value_Report__c/fields/Per_Square_Metre__c.field-meta.xml
<CustomField>
    <fullName>Per_Square_Metre__c</fullName>
    <label>Rent Paid Per Square Metre</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>