force-app/main/default/objects/Added_Value_Report__c/fields/Sport_NZ__c.field-meta.xml
<CustomField>
    <fullName>Sport_NZ__c</fullName>
    <inlineHelpText>Exclude Kiwisport</inlineHelpText>
    <label>Sport NZ</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>