force-app/main/default/objects/Added_Value_Report__c/fields/Tenant_Organisations__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Organisations__c</fullName>
    <label>Tenant Organisations</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>