force-app/main/default/objects/Added_Value_Report__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <inlineHelpText>Total income should equal the Total income per your audited financial statements. Exclude Kiwisport.</inlineHelpText>
    <label>Total Income</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>