force-app/main/default/objects/Added_Value_Report__c/fields/Value_of_Investment_on_Advertising_by_RS__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Investment_on_Advertising_by_RS__c</fullName>
    <label>Investment Value on Advertising by RST</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>