force-app/main/default/objects/Added_Value_Report__c/fields/Value_of_Sponsored_Media_Support__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Sponsored_Media_Support__c</fullName>
    <label>Value of Sponsored Media Support</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>