force-app/main/default/objects/Added_Value_Report__c/listViews/Recent_AVR.listView-meta.xml
<ListView>
    <fullName>Recent_AVR</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent AVR</label>
</ListView>